Add MCP tools to Agent Mode
Add encrypted MCP configuration, stdio and Streamable HTTP transports, tool approval and provider integration, Settings UI, lifecycle handling, documentation, and comprehensive tests.